fixed the large gap between section header and activities which occurs with clean (and other) design(s): "clear: both;" css rule that comes with this design was the trigger,

--- a/displaytabs_vertical.css
+++ b/displaytabs_vertical.css
@@ -18,3 +18,7 @@
 .yui3-skin-sam .yui3-tab-content {
     display: block;
 }
+
+.yui3-tab-panel .content .section li.activity {
+	clear: none;
+}
